# DanDB

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md
docs/: coding-conventions.md  file-format.txt  system-tables.txt
include/dandb/btree/: BTree.h  BTreeCursor.h  BTreeEntry.h  BTreeInternalPage.h  BTreeLeafPage.h  BTreePage.h  BTreeValidator.h
include/dandb/buffer/: BufferFrame.h  BufferPoolManager.h  LRUReplacer.h  PageGuard.h  PagePin.h
include/dandb/catalog/: Catalog.h  CatalogInitializer.h  CatalogNames.h  ColumnDescriptor.h  ColumnId.h  IndexDescriptor.h  IndexId.h  IndexNames.h  SystemTables.h  TableDescriptor.h  TableId.h
include/dandb/core/: Bytes.h  Checksum.h  Constants.h  Endian.h  Result.h  Status.h
include/dandb/platform/: DatabasePath.h  FileFaultInjector.h  FileHandle.h  FileLock.h
include/dandb/record/: Column.h  KeyCodec.h  LiteralValue.h  LogicalType.h  LogicalTypeCodec.h  Row.h  RowCodec.h  RowHelpers.h  Schema.h  Value.h
include/dandb/storage/: DatabaseHeader.h  DiskManager.h  Page.h  PageHandle.h  PageId.h  Pager.h
include/dandb/transaction/: TransactionState.h
include/dandb/wal/: PendingFrame.h  WalCommitRecord.h  WalHeader.h  WalManager.h  WalPageFrame.h  WalScanResult.h  WalScanner.h
src/btree/: BTree.cpp  BTreeCursor.cpp  BTreePage.cpp  BTreeValidator.cpp
src/buffer/: BufferPoolManager.cpp  LRUReplacer.cpp  PageGuard.cpp  PagePin.cpp
src/catalog/: Catalog.cpp  CatalogInitializer.cpp  CatalogInitializer.h  CatalogLoader.cpp  CatalogLoader.h  ColumnDescriptor.cpp  IndexDescriptor.cpp  IndexNames.cpp  SystemTables.cpp  TableDescriptor.cpp
src/cli/: Main.cpp
src/core/: Bytes.cpp  Checksum.cpp  Core.cpp  Endian.cpp  Status.cpp
src/platform/: DatabasePath.cpp  FileHandle.cpp  FileLock.cpp
src/record/: Column.cpp  KeyCodec.cpp  LiteralValue.cpp  LogicalType.cpp  LogicalTypeCodec.cpp  Row.cpp  RowCodec.cpp  RowHelpers.cpp  RowValidation.cpp  RowValidation.h  Schema.cpp  Value.cpp
src/storage/: DatabaseHeader.cpp  DiskManager.cpp  Page.cpp  PageHandle.cpp  Pager.cpp
src/transaction/: TransactionState.cpp
src/wal/: WalCommitRecord.cpp  WalHeader.cpp  WalManager.cpp  WalPageFrame.cpp  WalScanner.cpp
tests/btree/: BTree.cpp  BTreePage.cpp  BTreeValidator.cpp
tests/buffer/: BufferFrame.cpp  BufferPoolManager.cpp  LRUReplacer.cpp
tests/catalog/: Catalog.cpp  CatalogInitializer.cpp  CatalogLoader.cpp  CatalogNames.cpp  ColumnDescriptor.cpp  ColumnId.cpp  IndexDescriptor.cpp  IndexId.cpp  IndexNames.cpp  SystemTables.cpp  TableDescriptor.cpp  TableId.cpp
tests/core/: Checksum.cpp  Constants.cpp  Endian.cpp  Result.cpp  Smoke.cpp  Status.cpp
tests/platform/: DatabasePath.cpp  FileHandle.cpp  FileLock.cpp
tests/record/: Column.cpp  KeyCodec.cpp  LiteralValue.cpp  LogicalType.cpp  LogicalTypeCodec.cpp  Row.cpp  RowCodec.cpp  RowHelpers.cpp  Schema.cpp  Value.cpp
tests/storage/: DatabaseHeader.cpp  DiskManager.cpp  Page.cpp  PageId.cpp  Pager.cpp
tests/testutil/: TempDir.cpp  TempDir.h  TempDirTests.cpp
tests/wal/: WalCommitRecord.cpp  WalHeader.cpp  WalManager.cpp  WalPageFrame.cpp  WalScanner.cpp
